Selected element on Web Inspector is not highlighted with CPU Rendering. https://bugs.webkit.org/show_bug.cgi?id=195933

Patch by Tomoki Imai <Tomoki.Imai@sony.com> on 2020-05-13
Reviewed by Devin Rousso.

Source/WebCore:

Expose InspectorOverlay::shouldShowOverlay via InspectorController.
It's used to determine whether WebPage needs a transparency layer to draw highlight.

* inspector/InspectorController.cpp:
(WebCore::InspectorController::shouldShowOverlay const):
* inspector/InspectorController.h:
* inspector/InspectorOverlay.h:

Source/WebKit:

Since WebInspectorClient::drawHighlight was not called while non accelerated compositing mode, we cannot see element highlight on web inspector.
This patch adds WebInspectorClient::drawHighlight call in WebPage::drawRect, which draws webpage image while non accelerated compositing mode, to overlay the highlight.
WebInspectorClient::highlight and WebInspectorClient::hideHighlight currently requests re-paint whole web page, but it should be able to optimize by only updating dirty rects in the future.

* WebProcess/Inspector/WebInspectorClient.cpp:
(WebKit::WebInspectorClient::highlight): If it's not acceleratedCompositingEnabled, then just request repaint.
(WebKit::WebInspectorClient::hideHighlight): If it's not acceleratedCompositingEnabled, then just request repaint.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::drawRect): Draw inspector overlay here if it's not accelerated compositing mode.

Canonical link: https://commits.webkit.org/224723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261614 268f45cc-cd09-0410-ab3c-d52691b4dbfc