Source/WebKit/WebProcess/Inspector/WebInspectorClient.cpp
@@ -111,8 +111,15 @@ void WebInspectorClient::didResizeMainFrame(Frame*)
 
 void WebInspectorClient::highlight()
 {
-    if (!m_page->corePage()->settings().acceleratedCompositingEnabled())
+    if (!m_page->corePage()->settings().acceleratedCompositingEnabled()) {
+#if PLATFORM(GTK) || PLATFORM(WIN) || PLATFORM(PLAYSTATION)
+        // FIXME: It can be optimized by marking only highlighted rect dirty.
+        // setNeedsDisplay always makes whole rect dirty, and could lead to poor performance.
+        // https://bugs.webkit.org/show_bug.cgi?id=195933
+        m_page->drawingArea()->setNeedsDisplay();
+#endif
         return;
+    }
 
 #if !PLATFORM(IOS_FAMILY)
     if (!m_highlightOverlay) {
@@ -133,6 +140,16 @@ void WebInspectorClient::highlight()
 
 void WebInspectorClient::hideHighlight()
 {
+#if PLATFORM(GTK) || PLATFORM(WIN) || PLATFORM(PLAYSTATION)
+    if (!m_page->corePage()->settings().acceleratedCompositingEnabled()) {
+        // FIXME: It can be optimized by marking only highlighted rect dirty.
+        // setNeedsDisplay always makes whole rect dirty, and could lead to poor performance.
+        // https://bugs.webkit.org/show_bug.cgi?id=195933
+        m_page->drawingArea()->setNeedsDisplay();
+        return;
+    }
+#endif
+
 #if !PLATFORM(IOS_FAMILY)
     if (m_highlightOverlay)
         m_page->corePage()->pageOverlayController().uninstallPageOverlay(*m_highlightOverlay, PageOverlay::FadeMode::Fade);
